--- a/.github/workflows/alert.yml
+++ b/.github/workflows/alert.yml
@@ -21,7 +21,7 @@ jobs:
     
     - name: Install dependencies
       run: |
-        pip install requests beautifulsoup4
+        pip install -r requirements.txt
     
     - name: Run conference alert
       env:
